--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 * {
     background-color:rgb(27, 38, 104);
 }
@@ -6,10 +10,14 @@ h1 {
     font-size: 5rem;
     font-family: 'Times New Roman', Times, serif;
     color: red
+    
 }
 
 ul {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: 'Times New Roman', Times, serif;
     color: white;
 }
+
+
+
